Fix profile dropdown menu and backend setup
- Change profile dropdown from hover-based to click-based for better usability
- Add click-outside detection to close dropdown when clicking elsewhere
- Set up backend with MongoDB connection
- Add data seeding utility for testing
- Create start-servers script for easier development

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "data:import": "node src/utils/seeder.js",
+    "data:destroy": "node src/utils/seeder.js -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
