--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "start:custom": "node server.js",
+    "lint": "next lint",
+    "data:import": "node -r esm src/utils/seeder.js",
+    "data:destroy": "node -r esm src/utils/seeder.js -d"
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^16.4.5",
+    "esm": "^3.2.25",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
