--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "start": "next start",
     "start:custom": "node server.js",
     "lint": "next lint",
-    "data:import": "node -r esm src/utils/seeder.js",
-    "data:destroy": "node -r esm src/utils/seeder.js -d"
+    "data:seed": "node -r esm src/utils/seed/run-seed.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.9",
+    "cloudinary": "^2.6.0",
     "colors": "^1.4.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "next": "15.3.0",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "slugify": "^1.6.6"
   },
