--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "data:seed": "node -r esm src/utils/seed/run-seed.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.9",
