--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.9",
@@ -20,11 +21,15 @@
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "fuse.js": "^7.1.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "next": "15.3.0",
     "next-cloudinary": "^6.16.0",
+    "pdfkit": "^0.17.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
