--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "start:custom": "node server.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:mrp": "node -r esm migrate-mrp.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -31,8 +32,10 @@
     "pdfkit": "^0.17.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
