--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "start:custom": "node server.js",
     "lint": "next lint",
-    "migrate:mrp": "node -r esm migrate-mrp.js"
+    "seed": "node src/scripts/seedData.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -19,10 +19,13 @@
     "cloudinary": "^2.6.0",
     "colors": "^1.4.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.2",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
+    "expr-eval": "^2.0.2",
     "fuse.js": "^7.1.0",
     "html2canvas": "^1.4.1",
+    "isomorphic-dompurify": "^2.18.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "mongodb": "^6.16.0",
@@ -35,7 +38,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
