--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.9",
     "cloudinary": "^2.6.0",
     "colors": "^1.4.0",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.2",
     "dotenv": "^16.4.5",
